--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,1 +1,62 @@
-<h1>Register</h1>
+<div class='row justify-content-center mt-5 bg-white w-75 h-75 mx-auto'>
+
+  <form action='/users/login' method='post' class='col-10 mt-5 pt-5'>
+    <h1 class='text-center'><a
+        class='btn border-0 text-black fs-1'
+      >Register</a></h1>
+    <div class='form-group mt-4'>
+      <label class='fs-5' for='name'>Name</label>
+      <input
+        type='text'
+        class='form-control mt-2 ms-3'
+        id='name'
+        name='name'
+        aria-describedby='name'
+        placeholder='Enter Name'
+      />
+    </div>
+    <div class='form-group mt-4'>
+      <label class='fs-5' for='email'>Email address</label>
+      <input
+        type='email'
+        id='email'
+        name='email'
+        class='form-control mt-2 ms-3'
+        aria-describedby='emailHelp'
+        placeholder='Enter email'
+      />
+    </div>
+    <div class='form-group mt-4'>
+      <label class='fs-5' for='password'>Password</label>
+      <input
+        type='password'
+        class='form-control ms-3 mt-2'
+        id='password'
+        name='password'
+        placeholder='Please enter password'
+      />
+    </div>
+    <div class='form-group mt-4'>
+      <label class='fs-5' for='confirmPassword'>Confirm Password</label>
+      <input
+        type='password'
+        class='form-control ms-3 mt-2'
+        id='confirmPassword'
+        name='confirmPassword'
+        placeholder='Enter password again'
+      />
+    </div>
+    <div class='form-group mt-5'>
+      <button
+        type='submit'
+        class='btn btn-primary fs-5 ms-3 w-100'
+      >Submit</button>
+    </div>
+    <div class='lead mt-3'>
+      <span class='fs-6 ms-3'>Already have account?<a
+          href='/users/login'
+          class='btn border-0 text-danger fs-6 mb-1'
+        >Login</a></span>
+    </div>
+  </form>
+</div>
