feat: add user registration feature

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,22 +5,23 @@
         class='btn border-0 text-black fs-1'
       >Login</a></h1>
     <div class='form-group mt-4'>
-      <label class='fs-5' for='exampleInputEmail1'>Email address</label>
+      <label class='fs-5' for='email'>Email address</label>
       <input
         type='email'
         class='form-control mt-2 ms-3'
-        id='exampleInputEmail1'
+        id='email'
         aria-describedby='emailHelp'
         placeholder='Enter email'
+        value='{{email}}'
       />
 
     </div>
     <div class='form-group mt-4'>
-      <label class='fs-5' for='exampleInputPassword1'>Password</label>
+      <label class='fs-5' for='password'>Password</label>
       <input
         type='password'
         class='form-control ms-3 mt-2'
-        id='exampleInputPassword1'
+        id='password'
         placeholder='Password'
       />
     </div>
