--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,6 +1,6 @@
 <div class='row justify-content-center mt-5 bg-white w-75 h-75 mx-auto'>
 
-  <form action='/users/login' method='post' class='col-10 mt-5 pt-5'>
+  <form action='/users/register' method='post' class='col-10 mt-5 pt-5'>
     <h1 class='text-center'><a
         class='btn border-0 text-black fs-1'
       >Register</a></h1>
@@ -13,6 +13,7 @@
         name='name'
         aria-describedby='name'
         placeholder='Enter Name'
+        value='{{name}}'
       />
     </div>
     <div class='form-group mt-4'>
@@ -24,6 +25,7 @@
         class='form-control mt-2 ms-3'
         aria-describedby='emailHelp'
         placeholder='Enter email'
+        value='{{email}}'
       />
     </div>
     <div class='form-group mt-4'>
@@ -34,6 +36,7 @@
         id='password'
         name='password'
         placeholder='Please enter password'
+        value='{{password}}'
       />
     </div>
     <div class='form-group mt-4'>
@@ -44,6 +47,7 @@
         id='confirmPassword'
         name='confirmPassword'
         placeholder='Enter password again'
+        value='{{confirmPassword}}'
       />
     </div>
     <div class='form-group mt-5'>
