--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 <div class='row justify-content-center mt-5 bg-white w-75 h-75 mx-auto'>
 
-  <form action='/users/login' method='post' class='col-10 mt-5 pt-5'>
+  <form action='/users/login' method='POST' class='col-10 mt-5 pt-5'>
     <h1 class='text-center'><a
         class='btn border-0 text-black fs-1'
       >Login</a></h1>
@@ -10,6 +10,7 @@
         type='email'
         class='form-control mt-2 ms-3'
         id='email'
+        name='email'
         aria-describedby='emailHelp'
         placeholder='Enter email'
         value='{{email}}'
@@ -22,6 +23,7 @@
         type='password'
         class='form-control ms-3 mt-2'
         id='password'
+        name='password'
         placeholder='Password'
       />
     </div>
@@ -29,7 +31,7 @@
       <button
         type='submit'
         class='btn btn-primary fs-5 ms-3 w-100'
-      >Submit</button>
+      >Login</button>
     </div>
     <div class='lead mt-3'>
       <span class='fs-6'>No account?<a
