--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,16 +13,18 @@
   <body class='bg-light'>
     <header>
       <nav class='navbar navbar-dark bg-primary justify-content-between'>
-        <a class='navbar-brand ms-5' href='/'>Todo List</a>
+        <a class='navbar-brand ms-5' href='/'>
+          {{#if isAuthenticated}}{{user.name}}'s{{/if}}
+          Todo List</a>
         {{#if isAuthenticated}}
           <a
             href='/users/logout'
-            class='btn btn-outline-white text-white me-5'
+            class='btn btn-outline-light text-white me-5'
           >Logout</a>
         {{else}}
           <a
             href='/users/login'
-            class='btn btn-outline-white text-white'
+            class='btn btn-outline-light text-white'
           >Login</a>
         {{/if}}
       </nav>
