--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,6 +4,7 @@
     <h1 class='text-center'><a
         class='btn border-0 text-black fs-1'
       >Login</a></h1>
+      {{> message}}
     <div class='form-group mt-4'>
       <label class='fs-5' for='email'>Email address</label>
       <input
