--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -4,29 +4,47 @@
       {{this.message}}
       <button
         type='button'
-        class='close'
-        data-dismiss='alert'
+        class='btn-close'
+        data-bs-dismiss='alert'
         aria-label='Close'
       >
-        <span aria-hidden='true'>&times;</span>
       </button>
     </div>
   {{/each}}
 {{/if}}
 {{#if success_msg}}
   <div class='alert alert-success alert-dismissible fade show' role='alert'>
-    {{success_msg}}
-    <button type='button' class='close' data-dismiss='alert' aria-label='Close'>
-      <span aria-hidden='true'>&times;</span>
+    {{{success_msg}}}
+    <button
+      type='button'
+      class='btn-close'
+      data-bs-dismiss='alert'
+      aria-label='Close'
+    >
     </button>
   </div>
 {{/if}}
-
 {{#if warning_msg}}
   <div class='alert alert-warning alert-dismissible fade show' role='alert'>
-    {{warning_msg}}
-    <button type='button' class='close' data-dismiss='alert' aria-label='Close'>
-      <span aria-hidden='true'>&times;</span>
+    {{{warning_msg}}}
+    <button
+      type='button'
+      class='btn-close'
+      data-bs-dismiss='alert'
+      aria-label='Close'
+    >
+    </button>
+  </div>
+{{/if}}
+{{#if error}}
+  <div class='alert alert-success alert-dismissible fade show' role='alert'>
+    {{{error}}}
+    <button
+      type='button'
+      class='btn-close'
+      data-bs-dismiss='alert'
+      aria-label='Close'
+    >
     </button>
   </div>
 {{/if}}
