--- a/views/login.hbs
+++ b/views/login.hbs
@@ -34,6 +34,7 @@
         class='btn btn-primary fs-5 ms-3 w-100'
       >Login</button>
     </div>
+    <a href="/auth/facebook" class="btn btn-info fs-5 ms-3 w-100 mt-3">facebook</a>
     <div class='lead mt-3'>
       <span class='fs-6'>No account?<a
           href='/users/register'
