--- a/views/register.hbs
+++ b/views/register.hbs
@@ -57,6 +57,7 @@
         class='btn btn-primary fs-5 ms-3 w-100'
       >Submit</button>
     </div>
+    <a href="/auth/facebook" class="btn btn-info fs-5 ms-3 w-100 mt-3">facebook</a>
     <div class='lead mt-3'>
       <span class='fs-6 ms-3'>Already have account?<a
           href='/users/login'
